--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-       < <link rel="stylesheet" href="index.css"
-         <script src="app.js" ></script</script>
+       <link rel="stylesheet" href="index.css">
+       <script src="app.js" ></script>
          <style>
               img {
                   width: 20px
